import uuid
import enum
from datetime import datetime
from sqlalchemy import Column, String, Numeric, Integer, DateTime, ForeignKey, Enum as SAEnum, Text
from sqlalchemy.dialects.postgresql import UUID, JSONB
from sqlalchemy.orm import relationship

from order_service.src.core.database import Base


class OrderStatus(str, enum.Enum):
    pending_stock_confirmation = "pending_stock_confirmation"
    confirmed = "confirmed"
    pending = "pending"
    paid = "paid"
    shipped = "shipped"
    delivered = "delivered"
    cancelled = "cancelled"


class Order(Base):
    __tablename__ = "orders"

    id = Column(UUID(as_uuid=True), primary_key=True, default=uuid.uuid4)
    user_id = Column(UUID(as_uuid=True), nullable=False, index=True)
    status = Column(
        SAEnum(OrderStatus, name="order_status"),
        nullable=False,
        default=OrderStatus.pending_stock_confirmation,
    )
    total_amount = Column(Numeric(12, 2), nullable=False)
    shipping_address = Column(JSONB, nullable=False)
    notes = Column(Text, nullable=True)
    saga_id = Column(UUID(as_uuid=True), nullable=True)
    reservation_id = Column(UUID(as_uuid=True), nullable=True)
    created_at = Column(DateTime, default=datetime.utcnow, nullable=False)
    updated_at = Column(DateTime, default=datetime.utcnow, onupdate=datetime.utcnow, nullable=False)

    items = relationship("OrderItem", back_populates="order", cascade="all, delete-orphan", lazy="selectin")

    CANCELLABLE_STATUSES = {
        OrderStatus.pending_stock_confirmation,
        OrderStatus.confirmed,
        OrderStatus.pending,
        OrderStatus.paid,
    }

    def can_cancel(self) -> bool:
        return self.status in self.CANCELLABLE_STATUSES


class OrderItem(Base):
    __tablename__ = "order_items"

    id = Column(UUID(as_uuid=True), primary_key=True, default=uuid.uuid4)
    order_id = Column(UUID(as_uuid=True), ForeignKey("orders.id", ondelete="CASCADE"), nullable=False)
    product_id = Column(UUID(as_uuid=True), nullable=False)
    quantity = Column(Integer, nullable=False)
    price = Column(Numeric(12, 2), nullable=False)
    product_name = Column(String(255), nullable=True)

    order = relationship("Order", back_populates="items")